[gd_scene load_steps=18 format=2]

[ext_resource path="res://Game/Stage/StageV2.gd" type="Script" id=1]
[ext_resource path="res://Game/Stage/Background/background_6.png" type="Texture" id=2]
[ext_resource path="res://Game/Stage/Background/background_3.png" type="Texture" id=3]
[ext_resource path="res://Game/Stage/Background/background_5.png" type="Texture" id=4]
[ext_resource path="res://Game/Actors/Pot.tscn" type="PackedScene" id=5]
[ext_resource path="res://Game/Stage/Background/background_1.png" type="Texture" id=6]
[ext_resource path="res://Game/Stage/Background/background_4.png" type="Texture" id=7]
[ext_resource path="res://Game/Stage/Background/background_2.png" type="Texture" id=8]
[ext_resource path="res://Fonts/PressStart2P.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://MainScreens/Tutorial/tutorial_3.png" type="Texture" id=10]
[ext_resource path="res://MainScreens/Tutorial/tutorial_4.png" type="Texture" id=11]
[ext_resource path="res://MainScreens/Tutorial/tutorial_2.png" type="Texture" id=12]
[ext_resource path="res://MainScreens/Tutorial/tutorial_1.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 8 ), ExtResource( 3 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=3]
size = 8
outline_size = 1
outline_color = Color( 0.321569, 0.2, 0.219608, 1 )
font_data = ExtResource( 9 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "Tutorial",
"speed": 2.0
} ]

[node name="StageV2" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 4
playing = true
centered = false

[node name="Pot" parent="." instance=ExtResource( 5 )]
position = Vector2( 192, 104 )

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="1" type="Position2D" parent="SpawnPoints"]
position = Vector2( 48, 26 )

[node name="2" type="Position2D" parent="SpawnPoints"]
position = Vector2( 96, 26 )

[node name="3" type="Position2D" parent="SpawnPoints"]
position = Vector2( 192, 26 )

[node name="4" type="Position2D" parent="SpawnPoints"]
position = Vector2( 288, 26 )

[node name="5" type="Position2D" parent="SpawnPoints"]
position = Vector2( 336, 26 )

[node name="6" type="Position2D" parent="SpawnPoints"]
position = Vector2( 336, 52 )

[node name="7" type="Position2D" parent="SpawnPoints"]
position = Vector2( 336, 104 )

[node name="8" type="Position2D" parent="SpawnPoints"]
position = Vector2( 336, 156 )

[node name="9" type="Position2D" parent="SpawnPoints"]
position = Vector2( 336, 182 )

[node name="10" type="Position2D" parent="SpawnPoints"]
position = Vector2( 288, 182 )

[node name="11" type="Position2D" parent="SpawnPoints"]
position = Vector2( 192, 182 )

[node name="12" type="Position2D" parent="SpawnPoints"]
position = Vector2( 96, 182 )

[node name="13" type="Position2D" parent="SpawnPoints"]
position = Vector2( 48, 182 )

[node name="14" type="Position2D" parent="SpawnPoints"]
position = Vector2( 48, 156 )

[node name="15" type="Position2D" parent="SpawnPoints"]
position = Vector2( 48, 104 )

[node name="16" type="Position2D" parent="SpawnPoints"]
position = Vector2( 48, 52 )

[node name="Crabs" type="Node2D" parent="."]

[node name="Score" type="Label" parent="."]
margin_right = 373.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.321569, 0.2, 0.219608, 1 )
text = "Score: 0"
align = 2
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="."]
margin_top = 17.0
margin_right = 373.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.321569, 0.2, 0.219608, 1 )
text = "Time: 25"
align = 2
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Countdown" type="Timer" parent="Time"]
autostart = true

[node name="Tutorial" type="Button" parent="."]
pause_mode = 2
margin_left = 288.0
margin_top = 182.0
margin_right = 384.0
margin_bottom = 208.0
focus_mode = 0
custom_fonts/font = SubResource( 3 )
shortcut_in_tooltip = false
text = "Tutorial"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpawnerTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="DifficultTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="SpawnDelay" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="TutorialImg" type="AnimatedSprite" parent="."]
pause_mode = 2
visible = false
frames = SubResource( 4 )
animation = "Tutorial"
frame = 1
playing = true
offset = Vector2( 192, 104 )

[node name="ExitTutorial" type="TextureButton" parent="TutorialImg"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 60.0
margin_top = 17.0
margin_right = 60.0
margin_bottom = 17.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Time/Countdown" to="." method="_on_Countdown_timeout"]
[connection signal="pressed" from="Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="timeout" from="SpawnerTimer" to="." method="_on_SpawnerTimer_timeout"]
[connection signal="timeout" from="DifficultTimer" to="." method="_on_DifficultTimer_timeout"]
[connection signal="timeout" from="SpawnDelay" to="." method="_on_SpawnDelay_timeout"]
[connection signal="pressed" from="TutorialImg/ExitTutorial" to="." method="_on_ExitTutorial_pressed"]
